# UmaSimCraft

./: CHANGELOG.md  DEVELOPMENT_PLAN.md  README.md  analyze_db.py  pyproject.toml  requirements.txt
.cursor/rules/: atomic-design.mdc  context.mdc  core.mdc  deployment.mdc  django.mdc  frontend.mdc  testing.mdc
docs/: 01-프로젝트-개요.md  02-기술-설계서.md  03-개발-진행-계획서.md  04-데이터-설계서.md  05-API-설계서.md  06-프론트엔드-설계서.md  07-배포-운영-가이드.md  08-Data-Cards-앱-개발서.md  README.md
planning/annual/: 2024-annual-plan.md  annual-metrics.md
planning/monthly/: 01-january-2024.md  02-february-2024.md  03-march-2024.md  04-april-2024.md  05-may-2024.md  06-june-2024.md  07-july-2024.md  08-august-2024.md  09-september-2024.md  10-october-2024.md  11-november-2024.md  12-december-2024.md
planning/quarterly/: Q1-2024-plan.md  Q2-2024-plan.md  Q3-2024-plan.md  Q4-2024-plan.md
project/: asgi.py  settings.py  urls.py
restapi/: urls.py  views.py
restapi/templates/restapi/: index.html
simulation/: urls.py  views.py
simulation/templates/simulation/: index.html
templates/: base.html  home.html
theme/: package.json  tailwind.config.js
theme/static_src/src/: styles.css
websocket/: urls.py  views.py
websocket/templates/websocket/: index.html
